--- a/lab_conf-talk.html
+++ b/lab_conf-talk.html
@@ -186,6 +186,30 @@
                                         <a href="#tabcontent" class="link-prev_def">2013</a>
                                        </button>
                                    </li>
+                                   <li><button class="tablinks" onclick="openJournal(event, '2012')" style=" background: transparent; border: none !important;">
+                                        <a href="#tabcontent" class="link-prev_def">2012</a>
+                                       </button>
+                                   </li>
+                                   <li><button class="tablinks" onclick="openJournal(event, '2010')" style=" background: transparent; border: none !important;">
+                                        <a href="#tabcontent" class="link-prev_def">2010</a>
+                                       </button>
+                                   </li>
+                                   <li><button class="tablinks" onclick="openJournal(event, '2009')" style=" background: transparent; border: none !important;">
+                                        <a href="#tabcontent" class="link-prev_def">2009</a>
+                                       </button>
+                                   </li>
+                                   <li><button class="tablinks" onclick="openJournal(event, '2008')" style=" background: transparent; border: none !important;">
+                                        <a href="#tabcontent" class="link-prev_def">2008</a>
+                                       </button>
+                                   </li>
+                                   <li><button class="tablinks" onclick="openJournal(event, '2004')" style=" background: transparent; border: none !important;">
+                                        <a href="#tabcontent" class="link-prev_def">2004</a>
+                                       </button>
+                                   </li>
+                                   <li><button class="tablinks" onclick="openJournal(event, '2002')" style=" background: transparent; border: none !important;">
+                                        <a href="#tabcontent" class="link-prev_def">2002</a>
+                                       </button>
+                                   </li>
                             </ul>
                         </nav><!--  /.journal-papers-nav -->
                 </div>
@@ -811,21 +835,235 @@
                         <li>
                                 <div class="time-span">
                                     <div class="time-year">2013</div>
-                                    <div class="time-month">March 6-8</div>
+                                    <div class="time-month">April 5-6</div>
                                 </div>
                                 <div class="timeline-meta">
-                                    <h3 class="staff-title"><i>Sahu S.S.,<u> Weirick T.</u></i> and <b>Kaundal R<sup>*</sup>.</b></h3>
+                                    <h3 class="staff-title">Ahmed F.,<b> Kaundal R.</b> and Raghava G.P.S.</h3>
                                         <!-- <div class="__time">7:00pm</div> -->
-                                    <div class="__loc"><span>Location:</span>The XI th MidSouth Computational Biology &
-                                        Bioinformatics Society (MCBIOS) annual conference; Oklahoma State University, Stillwater (OK), USA</div>
-                                    <p class="meta-text">Prediction of Arabidopsis-Pseudomonas syringae
-                                            interactome based on domain and interolog based approaches.
+                                    <div class="__loc"><span>Location:</span>The X th MidSouth
+                                        Computational Biology & Bioinformatics Society (MCBIOS) annual conference; University of Missouri,
+                                        Columbia (MO), USA</div>
+                                    <p class="meta-text">PHDcleav: a SVM-based method for predicting human
+                                            Dicer cleavage sites using sequence and secondary structure of miRNA precursors.
                                             <!-- <ul><em>1 st place in flash talk presentation</em></ul> -->
                                         </p>
                                 </div>
                         </li><!-- /timeline-item --> 
-                     
-                            
+                        <li>
+                                <div class="time-span">
+                                    <div class="time-year">2013</div>
+                                    <div class="time-month">March 9-10</div>
+                                </div>
+                                <div class="timeline-meta">
+                                    <h3 class="staff-title"><u><i>Moncrief R.</i></u> and <b>Kaundal R<sup>*</sup>.</b></h3>
+                                        <!-- <div class="__time">7:00pm</div> -->
+                                    <div class="__loc"><span>Location:</span>Gordon Research Conferences (Chemical & Biological Terrorism
+                                        Defense); Ventura Beach Marriott, Ventura (CA), USA</div>
+                                    <p class="meta-text">Artificial Intelligence-based prediction of plant host-pathogen protein
+                                            interaction networks in select agents.
+                                            <!-- <ul><em>1 st place in flash talk presentation</em></ul> -->
+                                        </p>
+                                </div>
+                        </li><!-- /timeline-item --> 
+                        <li>
+                                <div class="time-span">
+                                    <div class="time-year">2013</div>
+                                    <div class="time-month">March 3-5</div>
+                                </div>
+                                <div class="timeline-meta">
+                                    <h3 class="staff-title"><u><i>Weirick T.</i></u>, Fathepure B.Z., Mahalingam R. and <b>Kaundal R<sup>*</sup>.</b></h3>
+                                        <!-- <div class="__time">7:00pm</div> -->
+                                    <div class="__loc"><span>Location:</span>NSF EPSCoR Bioinformatics Workshop; Arkansas State University, Little Rock (AR), USA</div>
+                                    <p class="meta-text">LigPred: a Comprehensive Prediction
+                                            System for the Identification and Classification of Enzymes Related to the Synthesis and Degradation of
+                                            Lignin.
+                                            <!-- <ul><em>1 st place in flash talk presentation</em></ul> -->
+                                        </p>
+                                </div>
+                        </li><!-- /timeline-item --> 
+                        <li>
+                                <div class="time-span">
+                                    <div class="time-year">2013</div>
+                                    <div class="time-month">Feb 20-21</div>
+                                </div>
+                                <div class="timeline-meta">
+                                    <h3 class="staff-title"><u><i>Kelley R.</i></u> and <b>Kaundal, R<sup>*</sup>.</b></h3>
+                                        <!-- <div class="__time">7:00pm</div> -->
+                                    <div class="__loc"><span>Location:</span>OSU Annual Research Week & Symposium (2013); Oklahoma State
+                                        University, Stillwater (OK), USA</div>
+                                    <p class="meta-text">Bioinformatics Approaches to Deciphering Genome-wide Host-Pathogen
+                                            Protein Interaction Networks.
+                                            <!-- <ul><em>1 st place in flash talk presentation</em></ul> -->
+                                        </p>
+                                </div>
+                        </li><!-- /timeline-item --> 
+                        <li>
+                                <div class="time-span">
+                                    <div class="time-year">2013</div>
+                                    <div class="time-month">Feb 20-21</div>
+                                </div>
+                                <div class="timeline-meta">
+                                    <h3 class="staff-title"><u><i>Weirick T.</i></u>, Fathepure B.Z., Mahalingam R. and <b>Kaundal R<sup>*</sup>.</b></h3>
+                                        <!-- <div class="__time">7:00pm</div> -->
+                                    <div class="__loc"><span>Location:</span>OSU Annual Research Week & Symposium (2013); Oklahoma State University, Stillwater (OK),
+                                        USA</div>
+                                    <p class="meta-text">LigPred: a Comprehensive Prediction
+                                            System for the Identification and Classification of Enzymes Related to the Synthesis and Degradation of
+                                            Lignin
+                                            <!-- <ul><em>1 st place in flash talk presentation</em></ul> -->
+                                        </p>
+                                </div>
+                        </li><!-- /timeline-item -->        
+                    </ul>
+            </div>
+            <div class="auth-deff_timeline_timeline-segment tabcontent" id="2012">
+                    <ul class="auth-deff_timeline list-unstyled"> 
+                       <li>
+                        <div class="time-span">
+                            <div class="time-year">2012</div>
+                            <div class="time-month">Sep 20-21</div>
+                        </div>
+                        <div class="timeline-meta">
+                            <h3 class="staff-title"><u><i>Kelley R.</i></u> and <b>Kaundal, R<sup>*</sup>.</b></h3>
+                                <!-- <div class="__time">7:00pm</div> -->
+                            <div class="__loc"><span>Location:</span>Biochemistry & Molecular Biology Annual Research Symposium (2012);
+                                Oklahoma State University, Stillwater (OK), USA</div>
+                            <p class="meta-text">Bioinformatics Approaches to Deciphering Genome-wide Host-Pathogen
+                                    Protein Interaction Networks.
+                                    <!-- <ul><em>1 st place in flash talk presentation</em></ul> -->
+                                </p>
+                        </div>
+                       </li><!-- /timeline-item -->     
+                       <li>
+                            <div class="time-span">
+                                <div class="time-year">2012</div>
+                                <div class="time-month">Feb 17-18</div>
+                            </div>
+                            <div class="timeline-meta">
+                                <h3 class="staff-title">Verma R.<sup>^</sup> and <b>Kaundal R<sup>*</sup>.</b></h3>
+                                    <!-- <div class="__time">7:00pm</div> -->
+                                <div class="__loc"><span>Location:</span>The IX th MidSouth Computational Biology & Bioinformatics Society
+                                    (MCBIOS) annual conference; University of Mississippi, Oxford (MS), USA</div>
+                                <p class="meta-text">A Support Vector Machine-based prediction method to classify the
+                                        plastid and non-plastid type proteins.
+                                        <!-- <ul><em>1 st place in flash talk presentation</em></ul> -->
+                                    </p>
+                            </div>
+                           </li><!-- /timeline-item -->  
+                    </ul>
+            </div>
+            <div class="auth-deff_timeline_timeline-segment tabcontent" id="2010">
+                    <ul class="auth-deff_timeline list-unstyled"> 
+                       <li>
+                        <div class="time-span">
+                            <div class="time-year">2010</div>
+                            <div class="time-month">July 10-14</div>
+                        </div>
+                        <div class="timeline-meta">
+                            <h3 class="staff-title"><b>Kaundal R.</b> and Zhao P.X.</h3>
+                                <!-- <div class="__time">7:00pm</div> -->
+                            <div class="__loc"><span>Location:</span>The 18 th Annual International Conference on
+                                Intelligent Systems for Molecular Biology (ISMB); Boston (MA), USA</div>
+                            <p class="meta-text">A systematic approach to predicting organism-specific subcellular
+                                    localization suggests species-specific sorting patterns.
+                                    <!-- <ul><em>1 st place in flash talk presentation</em></ul> -->
+                                </p>
+                        </div>
+                       </li><!-- /timeline-item -->     
+                    </ul>
+            </div>
+            <div class="auth-deff_timeline_timeline-segment tabcontent" id="2009">
+                    <ul class="auth-deff_timeline list-unstyled"> 
+                       <li>
+                        <div class="time-span">
+                            <div class="time-year">2010</div>
+                            <div class="time-month">July 18-22</div>
+                        </div>
+                        <div class="timeline-meta">
+                            <h3 class="staff-title"><b>Kaundal R.</b> and Zhao P.X.</h3>
+                                <!-- <div class="__time">7:00pm</div> -->
+                            <div class="__loc"><span>Location:</span>American
+                                Society of Plant Biologists (ASPB) meeting; Honolulu, Hawaii Islands, USA</div>
+                            <p class="meta-text">ASLpred: Arabidopsis Subcellular Localization predictor.
+                                    <!-- <ul><em>1 st place in flash talk presentation</em></ul> -->
+                                </p>
+                        </div>
+                       </li><!-- /timeline-item -->     
+                    </ul>
+            </div>
+            <div class="auth-deff_timeline_timeline-segment tabcontent" id="2008">
+                    <ul class="auth-deff_timeline list-unstyled"> 
+                       <li>
+                        <div class="time-span">
+                            <div class="time-year">2008</div>
+                            <div class="time-month">Jan 12-16</div>
+                        </div>
+                        <div class="timeline-meta">
+                            <h3 class="staff-title"><b>Kaundal R.</b> and Zhao P.X.</h3>
+                                <!-- <div class="__time">7:00pm</div> -->
+                            <div class="__loc"><span>Location:</span>Plant and Animal Genomes conference XVI (PAG meeting); San Diego (CA), USA</div>
+                            <p class="meta-text">An integrated prediction system for protein subcellular localization in
+                                    Arabidopsis.
+                                    <!-- <ul><em>1 st place in flash talk presentation</em></ul> -->
+                                </p>
+                        </div>
+                       </li><!-- /timeline-item -->     
+                    </ul>
+            </div>
+            <div class="auth-deff_timeline_timeline-segment tabcontent" id="2004">
+                    <ul class="auth-deff_timeline list-unstyled"> 
+                       <li>
+                        <div class="time-span">
+                            <div class="time-year">2004</div>
+                            <div class="time-month">Feb 19-21</div>
+                        </div>
+                        <div class="timeline-meta">
+                            <h3 class="staff-title">A.S. Kapoor and <b>R. Kaundal</b></h3>
+                                <!-- <div class="__time">7:00pm</div> -->
+                            <div class="__loc"><span>Location:</span>The 56 th Annual meeting and National Symposium on Crop Surveillance: Disease
+                                Forecasting and Management; Division of Plant Pathology, Indian Agricultural Research Institute (IARI), New Delhi</div>
+                            <p class="meta-text">Development of weather based forewarning models for rice blast in
+                                    Himachal Pradesh.
+                                    <!-- <ul><em>1 st place in flash talk presentation</em></ul> -->
+                                </p>
+                        </div>
+                       </li><!-- /timeline-item -->    
+                       <li>
+                            <div class="time-span">
+                                <div class="time-year">2004</div>
+                                <div class="time-month">Nov 09-10</div>
+                            </div>
+                            <div class="timeline-meta">
+                                <h3 class="staff-title">A.S. Kapoor and <b>R. Kaundal</b></h3>
+                                    <!-- <div class="__time">7:00pm</div> -->
+                                <div class="__loc"><span>Location:</span>National Symposium on Emerging Trends in Plant Disease Management; Department
+                                    of Plant Pathology, CSK Himachal Pradesh Agricultural University, Palampur, India</div>
+                                <p class="meta-text">Development of weather-based forecasting models for rice neck blast
+                                        in Himachal Pradesh.
+                                        <!-- <ul><em>1 st place in flash talk presentation</em></ul> -->
+                                    </p>
+                            </div>
+                           </li><!-- /timeline-item -->    
+                    </ul>
+            </div>
+            <div class="auth-deff_timeline_timeline-segment tabcontent" id="2002">
+                    <ul class="auth-deff_timeline list-unstyled"> 
+                       <li>
+                        <div class="time-span">
+                            <div class="time-year">2002</div>
+                            <div class="time-month">Oct 01-04</div>
+                        </div>
+                        <div class="timeline-meta">
+                            <h3 class="staff-title">Kapoor A.S., <b>Kaundal R</b> and Pratap A.</h3>
+                                <!-- <div class="__time">7:00pm</div> -->
+                            <div class="__loc"><span>Location:</span>CSK Himachal Pradesh Agricultural University (HPAU), Palampur, India</div>
+                            <p class="meta-text">Weather based forewarning of rice blast in H.P.
+                                    International Conference on Challenges and Options for Sustainable Development of the Himalayas -
+                                    Beyond 2002
+                                    <!-- <ul><em>1 st place in flash talk presentation</em></ul> -->
+                                </p>
+                        </div>
+                       </li><!-- /timeline-item -->     
                     </ul>
             </div>
         </div>
