--- a/index.html
+++ b/index.html
@@ -63,14 +63,15 @@
                             <a class="dropdown-toggle" data-toggle="dropdown"  data-hover="dropdown" href="#" title="Publications" data-animations="zoomIn">Publications <span class="caret"></span></a>
                             <ul class=" dropdown-menu" role="menu">
                                 <li>
-                                    <a href="lab_book.html" title="Books">Books</a>
-                                </li>
-                                <li>
                                     <a href="lab_journal.html" title="Journal Articles">Journal Articles</a>
                                 </li>
                                 <li>
                                     <a href="lab_conf-talk.html" title="Conferences and Talks">Conferences and Talks</a>
                                 </li>
+                                <li>
+                                    <a href="lab_book.html" title="Books">Books</a>
+                                </li>
+                                
                             </ul>
                         </li>
                         <li class="dropdown">
@@ -111,7 +112,7 @@
                                     </li>
                                 </ul>
                         </li>
-                        <li class="dropdown">
+                        <!-- <li class="dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown"  data-hover="dropdown" href="#" title="Events" data-animations="zoomIn">Events <span class="caret"></span></a>
                             <ul class=" dropdown-menu" role="menu">
                                 <li>
@@ -124,7 +125,7 @@
                         </li>
                         <li>
                             <a href="future_member.html" title="Future Member">Future Member</a>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             <!-- </div> -->
