--- a/lab_conf-talk.html
+++ b/lab_conf-talk.html
@@ -63,14 +63,15 @@
                         <a class="dropdown-toggle" data-toggle="dropdown"  data-hover="dropdown" href="#" title="Publications" data-animations="zoomIn">Publications <span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
                             <li>
-                                <a href="lab_book.html" title="Books">Books</a>
-                            </li>
-                            <li>
                                 <a href="lab_journal.html" title="Journal Articles">Journal Articles</a>
                             </li>
                             <li class="active">
                                 <a href="lab_conf-talk.html" title="Conferences and Talks">Conferences and Talks</a>
                             </li>
+                            <li>
+                                <a href="lab_book.html" title="Books">Books</a>
+                            </li>
+                            
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -111,7 +112,7 @@
                                 </li>
                             </ul>
                     </li>
-                    <li class="dropdown">
+                    <!-- <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown"  data-hover="dropdown" href="#" title="Events" data-animations="zoomIn">Events <span class="caret"></span></a>
                         <ul class=" dropdown-menu" role="menu">
                             <li>
@@ -124,7 +125,7 @@
                     </li>
                     <li>
                         <a href="future_member.html" title="Future Member">Future Member</a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         <!-- </div> -->
@@ -219,15 +220,15 @@
 
     <section class="deff-timeline-section">
         <div class="container">
-            <div class="auth-deff_timeline_timeline-segment tabcontent" id="2019">
-                <ul class="auth-deff_timeline list-unstyled">
-                    <li>
+            <div class="auth-deff_timeline_timeline-segment tabcontent " id="2019">
+                <ul class="auth-deff_timeline list-unstyled ">
+                    <li class="title-card">
                                 <div class="time-span">
                                     <div class="time-year">2019</div>
                                     <div class="time-month">Aug 07</div>
                                 </div>
                                 <div class="timeline-meta">
-                                    <h3 class="staff-title">Phatak S.<sup>^</sup>, Thomas A.,<strong> Kaundal R.</strong>, <i>Jones R.</i>, Hintze K. and Benninghoff A.</h3>
+                                    <h3 class="staff-title">Phatak S.<sup>^</sup>, Thomas A.,<strong>Kaundal R.</strong>, <i>Jones R.</i>, Hintze K. and Benninghoff A.</h3>
                                         <!-- <div class="__time">7:00pm</div> -->
                                     <div class="__loc"><span>Location:</span>The Animal, Dairy and Veterinary Sciences Summer Student Research
                                         Symposium; Utah State University (USU), Logan (UT)</div>
@@ -239,7 +240,7 @@
                                 </div>
                     </li><!-- /timeline-item -->
                     <br>
-                    <li>
+                    <li class="title-card">
                         <div class="time-span">
                                     <div class="time-year">2019</div>
                                     <div class="time-month">Apr 10-11</div>
@@ -255,7 +256,7 @@
                         </div>
                     </li><!-- /timeline-item -->
                     <br>
-                    <li>
+                    <li class="title-card">
                         <div class="time-span">
                                     <div class="time-year">2019</div>
                                     <div class="time-month">Aug 07</div>
@@ -273,7 +274,7 @@
                         </div>
                     </li><!-- /timeline-item -->
                     <br>
-                    <li>
+                    <li class="title-card">
                         <div class="time-span">
                                     <div class="time-year">2019</div>
                                     <div class="time-month">April 10-11</div>
@@ -291,7 +292,7 @@
                         </div>
                     </li><!-- /timeline-item -->
                     <br>
-                    <li>
+                    <li class="title-card">
                         <div class="time-span">
                                     <div class="time-year">2019</div>
                                     <div class="time-month">April 02</div>
@@ -308,7 +309,7 @@
                         </div>
                     </li><!-- /timeline-item -->   
                     <br>
-                    <li>
+                    <li class="title-card">
                                 <div class="time-span">
                                     <div class="time-year">2019</div>
                                     <div class="time-month">April 02</div>
@@ -325,7 +326,7 @@
                                 </div>
                     </li><!-- /timeline-item -->   
                     <br>
-                    <li>
+                    <li class="title-card">
                                 <div class="time-span">
                                     <div class="time-year">2019</div>
                                     <div class="time-month">April 02</div>
@@ -342,7 +343,7 @@
                                 </div>
                     </li><!-- /timeline-item -->   
                     <br>  
-                    <li>
+                    <li class="title-card">
                                 <div class="time-span">
                                     <div class="time-year">2019</div>
                                     <div class="time-month">March 28-30</div>
@@ -360,7 +361,7 @@
                                 </div>
                     </li><!-- /timeline-item -->   
                     <br>
-                    <li>
+                    <li class="title-card">
                         <div class="time-span">
                                     <div class="time-year">2019</div>
                                     <div class="time-month">Jan 12-16</div>
@@ -377,7 +378,7 @@
                         </div>
                     </li><!-- /timeline-item -->   
                     <br>
-                    <li>
+                    <li class="title-card">
                                 <div class="time-span">
                                     <div class="time-year">2019</div>
                                     <div class="time-month">Jan 20-23</div>
@@ -399,7 +400,7 @@
                     
                 </ul><!-- /.auth-deff_timeline -->
             </div>
-            <div class="auth-deff_timeline_timeline-segment tabcontent" id="2018">
+            <div class="auth-deff_timeline_timeline-segment tabcontent" style="display: none" id="2018">
                 <ul class="auth-deff_timeline list-unstyled">
                     <li>
                                 <div class="time-span">
@@ -536,7 +537,7 @@
                     </li><!-- /timeline-item --> 
                     </ul>
             </div>
-            <div class="auth-deff_timeline_timeline-segment tabcontent" id="2017">
+            <div class="auth-deff_timeline_timeline-segment tabcontent" style="display: none" id="2017">
                         <ul class="auth-deff_timeline list-unstyled">
                             <li>
                                         <div class="time-span">
@@ -573,7 +574,7 @@
                         </li><!-- /timeline-item -->   
                             </ul>
             </div>
-            <div class="auth-deff_timeline_timeline-segment tabcontent" id="2016">
+            <div class="auth-deff_timeline_timeline-segment tabcontent" style="display: none" id="2016">
                     <ul class="auth-deff_timeline list-unstyled"> 
                         <li>
                                 <div class="time-span">
@@ -627,7 +628,7 @@
                        </li><!-- /timeline-item -->   
                     </ul>
             </div>
-            <div class="auth-deff_timeline_timeline-segment tabcontent" id="2015">
+            <div class="auth-deff_timeline_timeline-segment tabcontent" style="display: none" id="2015">
                     <ul class="auth-deff_timeline list-unstyled"> 
                        <li>
                         <div class="time-span">
@@ -665,7 +666,7 @@
                         </li><!-- /timeline-item -->   
                     </ul>
             </div>
-            <div class="auth-deff_timeline_timeline-segment tabcontent" id="2014">
+            <div class="auth-deff_timeline_timeline-segment tabcontent" style="display: none" id="2014">
                     <ul class="auth-deff_timeline list-unstyled"> 
                        <li>
                         <div class="time-span">
@@ -718,7 +719,7 @@
                             </li><!-- /timeline-item -->  
                     </ul>
             </div>
-            <div class="auth-deff_timeline_timeline-segment tabcontent" id="2013">
+            <div class="auth-deff_timeline_timeline-segment tabcontent" style="display: none" id="2013">
                     <ul class="auth-deff_timeline list-unstyled"> 
                        <li>
                         <div class="time-span">
@@ -916,7 +917,7 @@
                         </li><!-- /timeline-item -->        
                     </ul>
             </div>
-            <div class="auth-deff_timeline_timeline-segment tabcontent" id="2012">
+            <div class="auth-deff_timeline_timeline-segment tabcontent" style="display: none" id="2012">
                     <ul class="auth-deff_timeline list-unstyled"> 
                        <li>
                         <div class="time-span">
@@ -952,7 +953,7 @@
                            </li><!-- /timeline-item -->  
                     </ul>
             </div>
-            <div class="auth-deff_timeline_timeline-segment tabcontent" id="2010">
+            <div class="auth-deff_timeline_timeline-segment tabcontent" style="display: none" id="2010">
                     <ul class="auth-deff_timeline list-unstyled"> 
                        <li>
                         <div class="time-span">
@@ -972,7 +973,7 @@
                        </li><!-- /timeline-item -->     
                     </ul>
             </div>
-            <div class="auth-deff_timeline_timeline-segment tabcontent" id="2009">
+            <div class="auth-deff_timeline_timeline-segment tabcontent" style="display: none" id="2009">
                     <ul class="auth-deff_timeline list-unstyled"> 
                        <li>
                         <div class="time-span">
@@ -991,7 +992,7 @@
                        </li><!-- /timeline-item -->     
                     </ul>
             </div>
-            <div class="auth-deff_timeline_timeline-segment tabcontent" id="2008">
+            <div class="auth-deff_timeline_timeline-segment tabcontent" style="display: none" id="2008">
                     <ul class="auth-deff_timeline list-unstyled"> 
                        <li>
                         <div class="time-span">
@@ -1010,7 +1011,7 @@
                        </li><!-- /timeline-item -->     
                     </ul>
             </div>
-            <div class="auth-deff_timeline_timeline-segment tabcontent" id="2004">
+            <div class="auth-deff_timeline_timeline-segment tabcontent" style="display: none" id="2004">
                     <ul class="auth-deff_timeline list-unstyled"> 
                        <li>
                         <div class="time-span">
@@ -1046,7 +1047,7 @@
                            </li><!-- /timeline-item -->    
                     </ul>
             </div>
-            <div class="auth-deff_timeline_timeline-segment tabcontent" id="2002">
+            <div class="auth-deff_timeline_timeline-segment tabcontent" style="display: none" id="2002">
                     <ul class="auth-deff_timeline list-unstyled"> 
                        <li>
                         <div class="time-span">
