update our team and tools

--- a/events.html
+++ b/events.html
@@ -174,8 +174,8 @@ svg {
                         <a href="lab_research.html" title="Research">Research</a>
                     </li>
                     <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#" title="People"  data-hover="dropdown" data-animations="zoomIn">People <span class="caret"></span></a>
-                        <ul class="dropdown-menu" role="menu">
+                            <a href="poeple.html" class="dropdown-toggle"   data-hover="dropdown" title="People" data-animations="zoomIn">People<span class="caret"></span></a>
+                            <ul class="dropdown-menu" role="menu">
                             <li>
                                 <a href="professor.html" title="Dr Rushmore">Dr. Rushmore</a>
                             </li>
@@ -835,6 +835,7 @@ document.getElementById(yearName).style.display = "block";
 evt.currentTarget.className += " active";
 
 }
+
 function openAllTools(evt, yearName) {
 
 var i, tabcontent, tablinks;
