--- a/events.html
+++ b/events.html
@@ -132,7 +132,7 @@
 .fancy-header {
   position: relative;
   height: 200px;
-  background-image: linear-gradient(#ff9d2f, #ff6126);
+  background-image: linear-gradient(rgb(15, 36, 57), rgb(15, 36, 57));
 }
 
 h4 {
