--- a/lab_journal.html
+++ b/lab_journal.html
@@ -189,7 +189,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="col-sm-3">
-                                                        <div class="journal-papers-doi"><span>DOI:</span> <a href="https://www.mdpi.com/2073-4425/10/10/734">10.3390/genes10100734</a></div>
+                                                        <div class="journal-papers-doi"><span>DOI:</span> <a target="_blank" href="https://www.mdpi.com/2073-4425/10/10/734">10.3390/genes10100734</a></div>
                                                     </div>
                                                 </div>
                                             </div><!-- /.journal-papers -->
@@ -213,7 +213,7 @@
                                                 </div>
                                             </div>
                                             <div class="col-sm-3">
-                                                <div class="journal-papers-doi"><span>DOI:</span> <a href="https://link.springer.com/article/10.1007%2Fs10142-017-0581-9">10.1007/s10142-017-0581-9</a></div>
+                                                <div class="journal-papers-doi"><span>DOI:</span> <a target="_blank" href="https://link.springer.com/article/10.1007%2Fs10142-017-0581-9">10.1007/s10142-017-0581-9</a></div>
                                             </div>
                                         </div>
                                     </div><!-- /.journal-papers -->
@@ -240,7 +240,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="col-sm-3">
-                                                        <div class="journal-papers-doi"><span>DOI:</span> <a href="https://bmcbioinformatics.biomedcentral.com/articles/10.1021/acs.est.6b03656">10.1021/acs.est.6b03656</a></div>
+                                                        <div class="journal-papers-doi"><span>DOI:</span> <a target="_blank" href="https://bmcbioinformatics.biomedcentral.com/articles/10.1021/acs.est.6b03656">10.1021/acs.est.6b03656</a></div>
                                                     </div>
                                                 </div>
                                             </div><!-- /.journal-papers -->
@@ -259,7 +259,7 @@
                                                             </div>
                                                         </div>
                                                         <div class="col-sm-3">
-                                                            <div class="journal-papers-doi"><span>DOI:</span> <a href="https://bmcbioinformatics.biomedcentral.com/articles/10.1186/s12859-016-1213-4">10.1186/s12859-016-1213-4</a></div>
+                                                            <div class="journal-papers-doi"><span>DOI:</span> <a target="_blank" href="https://bmcbioinformatics.biomedcentral.com/articles/10.1186/s12859-016-1213-4">10.1186/s12859-016-1213-4</a></div>
                                                         </div>
                                                     </div>
                                                 </div><!-- /.journal-papers -->
@@ -283,7 +283,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="col-sm-3">
-                                                        <div class="journal-papers-doi"><span>DOI:</span> <a href="https://bmcbioinformatics.biomedcentral.com/articles/10.1186/1471-2105-15-S11-S13">10.1186/1471-2105-15-S11-S13</a></div>
+                                                        <div class="journal-papers-doi"><span>DOI:</span> <a target="_blank" href="https://bmcbioinformatics.biomedcentral.com/articles/10.1186/1471-2105-15-S11-S13">10.1186/1471-2105-15-S11-S13</a></div>
                                                     </div>
                                                 </div>
                                             </div><!-- /.journal-papers -->
@@ -348,7 +348,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="col-sm-3">
-                                                    <div class="journal-papers-doi"><span>DOI:</span> <a href="https://bmcbioinformatics.biomedcentral.com/articles/10.1186/1471-2105-14-S14-S7">10.1186/1471-2105-14-S14-S7</a></div>
+                                                    <div class="journal-papers-doi"><span>DOI:</span> <a target="_blank" href="https://bmcbioinformatics.biomedcentral.com/articles/10.1186/1471-2105-14-S14-S7">10.1186/1471-2105-14-S14-S7</a></div>
                                                 </div>
                                             </div>
                                         </div><!-- /.journal-papers -->
@@ -367,7 +367,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="col-sm-3">
-                                                        <div class="journal-papers-doi"><span>DOI:</span> <a href="https://bmcbioinformatics.biomedcentral.com/articles/10.1186/1471-2105-14-S14-S9">10.1186/1471-2105-14-S14-S9</a></div>
+                                                        <div class="journal-papers-doi"><span>DOI:</span> <a target="_blank" href="https://bmcbioinformatics.biomedcentral.com/articles/10.1186/1471-2105-14-S14-S9">10.1186/1471-2105-14-S14-S9</a></div>
                                                     </div>
                                                 </div>
                                             </div><!-- /.journal-papers -->
@@ -386,7 +386,7 @@
                                                             </div>
                                                         </div>
                                                         <div class="col-sm-3">
-                                                            <div class="journal-papers-doi"><span>DOI:</span> <a href="https://bmcbioinformatics.biomedcentral.com/articles/10.1186/1471-2105-14-S14-S1">10.1186/1471-2105-14-S14-S1</a></div>
+                                                            <div class="journal-papers-doi"><span>DOI:</span> <a target="_blank" href="https://bmcbioinformatics.biomedcentral.com/articles/10.1186/1471-2105-14-S14-S1">10.1186/1471-2105-14-S14-S1</a></div>
                                                         </div>
                                                     </div>
                                                 </div><!-- /.journal-papers -->
@@ -412,7 +412,7 @@
                                                 </div>
                                             </div>
                                             <div class="col-sm-3">
-                                                <div class="journal-papers-doi"><span>DOI:</span> <a href="https://bmcbioinformatics.biomedcentral.com/articles/10.1186/1471-2105-13-S15-S1">10.1186/1471-2105-13-S15-S1</a></div>
+                                                <div class="journal-papers-doi"><span>DOI:</span> <a target="_blank" href="https://bmcbioinformatics.biomedcentral.com/articles/10.1186/1471-2105-13-S15-S1">10.1186/1471-2105-13-S15-S1</a></div>
                                             </div>
                                         </div>
                                     </div><!-- /.journal-papers -->
@@ -465,7 +465,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="col-sm-3">
-                                                        <div class="journal-papers-doi"><span>DOI:</span> <a href="http://www.plantphysiol.org/content/154/1/36">10.1104/pp.110.156851</a></div>
+                                                        <div class="journal-papers-doi"><span>DOI:</span> <a target="_blank" href="http://www.plantphysiol.org/content/154/1/36">10.1104/pp.110.156851</a></div>
                                                     </div>
                                                 </div>
                                             </div><!-- /.journal-papers -->
@@ -488,7 +488,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="col-sm-3">
-                                                        <div class="journal-papers-doi"><span>DOI:</span> <a href="http://www.plantphysiol.org/content/152/3/1716" target="_blank">10.1104/pp.109.148684</a></div>
+                                                        <div class="journal-papers-doi"><span>DOI:</span> <a target="_blank" href="http://www.plantphysiol.org/content/152/3/1716" target="_blank">10.1104/pp.109.148684</a></div>
                                                     </div>
                                                 </div>
                                             </div><!-- /.journal-papers -->
@@ -514,7 +514,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="col-sm-3">
-                                                        <div class="journal-papers-doi"><span>DOI:</span> <a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/pmic.200700597">10.1002/pmic.200700597</a></div>
+                                                        <div class="journal-papers-doi"><span>DOI:</span> <a target="_blank" href="https://onlinelibrary.wiley.com/doi/abs/10.1002/pmic.200700597">10.1002/pmic.200700597</a></div>
                                                     </div>
                                                 </div>
                                             </div><!-- /.journal-papers -->
@@ -566,7 +566,7 @@
                                                 </div>
                                             </div>
                                             <div class="col-sm-3">
-                                                <div class="journal-papers-doi"><span>DOI:</span> <a href="https://bmcbioinformatics.biomedcentral.com/articles/10.1186/1471-2105-7-485" target="_blank">10.1186/1471-2105-7-485</a></div>
+                                                <div class="journal-papers-doi"><span>DOI:</span> <a target="_blank" href="https://bmcbioinformatics.biomedcentral.com/articles/10.1186/1471-2105-7-485" target="_blank">10.1186/1471-2105-7-485</a></div>
                                             </div>
                                         </div>
                                     </div><!-- /.journal-papers -->
