--- a/lab_journal.html
+++ b/lab_journal.html
@@ -35,10 +35,10 @@
     <![endif]-->
     
     <nav class="navbar navbar-white navbar-kawsa navbar-fixed-top" role="navigation">
-        <!-- <div class="container"> -->
-            <!-- <div class="navbar-header"> -->
+        <div class="container">
+            <div class="navbar-header">
                 <button aria-controls="navbar" aria-expanded="false" class="navbar-toggle collapsed" data-target="#navbar" data-toggle="collapse" type="button"><span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span></button> 
-                <a class="navbar-brand" href="index.html"><img alt="" class="img-responsive" src="assets/img/usu.png"></a>
+                <a class="navbar-brand" href="index.html"><img alt="" class="img-responsive" src="assets/img/site-logo1.png"></a>
             </div>
             <div class="navbar-collapse collapse sabbi-navbar-collapse  navbar-nav-hov_underline" id="navbar">
                 <div class="nav-btn-wrap"><a href="#" class="btn btn-primary pull-right">Join Research</a></div>
@@ -128,8 +128,8 @@
                         <a href="future_member.html" title="Future Member">Future Member</a>
                     </li> -->
                 </ul>
-            <!-- </div> -->
-        <!-- </div> -->
+            </div>
+        </div>
     </nav><!-- /.navbar -->
     <header class="sabbi-page-header-classic page-header-lg">
         <div class="page-header-content conternt-center">
@@ -776,19 +776,19 @@
         r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
         ga('create','UA-XXXXX-X','auto');ga('send','pageview');
 
-        $(document).ready(function(){
+    //     $(document).ready(function(){
           
-          $(window).scroll(function(){
+    //       $(window).scroll(function(){
 
-            if($(window).scrollTop()>100){
-              $('.navbar-collapse').css('background-color', '#0f2439');
-            }else{
-              $('.navbar-collapse').css('background-color', 'transparent');
-            }
+    //         if($(window).scrollTop()>100){
+    //           $('.navbar-collapse').css('background-color', '#0f2439');
+    //         }else{
+    //           $('.navbar-collapse').css('background-color', 'transparent');
+    //         }
 
-          });
+    //       });
 
-     });
+    //  });
 
 function openJournal(evt, yearName) {
 
