--- a/ourteam.html
+++ b/ourteam.html
@@ -105,10 +105,10 @@
     <![endif]-->
 
     <nav class="navbar navbar-white navbar-kawsa navbar-fixed-top" role="navigation">
-        <!-- <div class="container"> -->
+        <div class="container">
             <div class="navbar-header">
                 <button aria-controls="navbar" aria-expanded="false" class="navbar-toggle collapsed" data-target="#navbar" data-toggle="collapse" type="button"><span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span></button> 
-                <a class="navbar-brand" href="index.html"><img alt="" class="img-responsive" src="assets/img/usu.png"></a>
+                <a class="navbar-brand" href="index.html"><img alt="" class="img-responsive" src="assets/img/site-logo1.png"></a>
             </div>
             <div class="navbar-collapse collapse sabbi-navbar-collapse  navbar-nav-hov_underline" id="navbar">
                 <div class="nav-btn-wrap"><a href="#" class="btn btn-primary pull-right">Join Research</a></div>
@@ -199,7 +199,7 @@
                     </li> -->
                 </ul>
             </div>
-        <!-- </div> -->
+        </div>
     </nav><!-- /.navbar -->
     <header class="sabbi-page-header-classic sabbi-page-header-team page-header-lg">
         <div class="page-header-content conternt-center">
@@ -750,15 +750,15 @@
            $('body').removeClass("modal-open")
                $('body').css("padding-right","");     
      });
-          $(window).scroll(function(){
+    //       $(window).scroll(function(){
 
-            if($(window).scrollTop()>100){
-              $('.navbar-collapse').css('background-color', '#0f2439');
-            }else{
-              $('.navbar-collapse').css('background-color', 'transparent');
-            }
+    //         if($(window).scrollTop()>100){
+    //           $('.navbar-collapse').css('background-color', '#0f2439');
+    //         }else{
+    //           $('.navbar-collapse').css('background-color', 'transparent');
+    //         }
 
-          });
+    //       });
 
      });
 
