updated home page

--- a/ourteam.html
+++ b/ourteam.html
@@ -91,11 +91,12 @@
 }
 
 .team-classification{
-  padding: 5px; 
+  padding: 0.5px; 
   border-radius: 20px; 
   text-align: center; 
-  font-size: 30px; 
+  font-size: 20px; 
   font-weight: bold;
+  background-image: linear-gradient(to right,#0f2439,white,#0f2439);
 }
     </style>
 </head>
