--- a/index.html
+++ b/index.html
@@ -130,10 +130,10 @@
                                         <a href="events_single.html" title="Journal Articles">Events Single Page</a>
                                     </li>
                                 </ul>
-                            </li>
+                            </li>-->
                             <li>
-                                <a href="future_member.html" title="Future Member">Future Member</a>
-                            </li> -->
+                                <a href="contact.html" title="Contact">Contact</a>
+                            </li>
                         </ul>
                     </div>
             </div>
